gen/MiLenguajeParser.java
// Generated from C:/Users/huber/OneDrive/Escritorio/Materias 2020-2/Lenguajes de programacion/practica3/grammar\MiLenguaje.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, TK_AND=2, TK_OR=3, DATATYPE=4, WS=5, LINE_COMMENT=6, TK_BOOL=7, 
		TK_FUNCTION=8, FID=9, VAR=10, TK_PRINT=11, TK_INPUT=12, TK_WHEN=13, TK_IF=14, 
		TK_UNLESS=15, TK_END=16, TK_WHILE=17, TK_RETURN=18, TK_UNTIL=19, TK_LOOP=20, 
		TK_DO=21, TK_REPEAT=22, TK_FOR=23, TK_NEXT=24, TK_BREAK=25, TK_ELSE=26, 
		PIZQ=27, PDER=28, CORIZQ=29, CORDER=30, ROP=31, ASIGOP=32, SMCOLON=33, 
		MULOP=34, SUMOP=35, MODOP=36, COLON=37, INCR=38, DCR=39, TK_NOT=40, TK_NUM=41, 
		DOUBLE=42, ID=43;
	public static final int
		RULE_prog = 0, RULE_prog_fn = 1, RULE_main_prog = 2, RULE_main_stmt = 3, 
		RULE_stmt = 4, RULE_do_sig = 5, RULE_signo = 6, RULE_fn_decl_list = 7, 
		RULE_fn_decl_list_withVAR = 8, RULE_var_decl = 9, RULE_cont_data = 10, 
		RULE_stmt_block = 11, RULE_stmt_mas = 12, RULE_lexpr = 13, RULE_lexpr2 = 14, 
		RULE_nexpr_prima_l2 = 15, RULE_nexpr_prima = 16, RULE_lexpr_and = 17, 
		RULE_nexpr_primab = 18, RULE_lexpr_or = 19, RULE_nexpr_primac = 20, RULE_nexpr = 21, 
		RULE_rexpr = 22, RULE_sig = 23, RULE_simple_expr = 24, RULE_t2 = 25, RULE_term = 26, 
		RULE_fa = 27, RULE_factor = 28, RULE_s = 29, RULE_f2 = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "prog_fn", "main_prog", "main_stmt", "stmt", "do_sig", "signo", 
			"fn_decl_list", "fn_decl_list_withVAR", "var_decl", "cont_data", "stmt_block", 
			"stmt_mas", "lexpr", "lexpr2", "nexpr_prima_l2", "nexpr_prima", "lexpr_and", 
			"nexpr_primab", "lexpr_or", "nexpr_primac", "nexpr", "rexpr", "sig", 
			"simple_expr", "t2", "term", "fa", "factor", "s", "f2"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, null, null, null, null, null, "'function'", null, 
			"'var'", "'print'", "'input'", "'when'", "'if'", "'unless'", "'end'", 
			"'while'", "'return'", "'until'", "'loop'", "'do'", "'repeat'", "'for'", 
			"'next'", "'break'", "'else'", "'('", "')'", "'{'", "'}'", null, null, 
			"';'", null, null, "'%'", "','", "'++'", "'--'", "'not'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "TK_AND", "TK_OR", "DATATYPE", "WS", "LINE_COMMENT", "TK_BOOL", 
			"TK_FUNCTION", "FID", "VAR", "TK_PRINT", "TK_INPUT", "TK_WHEN", "TK_IF", 
			"TK_UNLESS", "TK_END", "TK_WHILE", "TK_RETURN", "TK_UNTIL", "TK_LOOP", 
			"TK_DO", "TK_REPEAT", "TK_FOR", "TK_NEXT", "TK_BREAK", "TK_ELSE", "PIZQ", 
			"PDER", "CORIZQ", "CORDER", "ROP", "ASIGOP", "SMCOLON", "MULOP", "SUMOP", 
			"MODOP", "COLON", "INCR", "DCR", "TK_NOT", "TK_NUM", "DOUBLE", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Prog_fnContext prog_fn() {
			return getRuleContext(Prog_fnContext.class,0);
		}
		public Main_progContext main_prog() {
			return getRuleContext(Main_progContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			prog_fn();
			setState(63);
			main_prog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prog_fnContext extends ParserRuleContext {
		public Fn_decl_listContext fn_decl_list() {
			return getRuleContext(Fn_decl_listContext.class,0);
		}
		public Prog_fnContext prog_fn() {
			return getRuleContext(Prog_fnContext.class,0);
		}
		public Prog_fnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog_fn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitProg_fn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prog_fnContext prog_fn() throws RecognitionException {
		Prog_fnContext _localctx = new Prog_fnContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog_fn);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				fn_decl_list();
				setState(66);
				prog_fn();
				}
				break;
			case VAR:
			case TK_PRINT:
			case TK_INPUT:
			case TK_WHEN:
			case TK_IF:
			case TK_UNLESS:
			case TK_END:
			case TK_WHILE:
			case TK_RETURN:
			case TK_UNTIL:
			case TK_LOOP:
			case TK_DO:
			case TK_REPEAT:
			case TK_FOR:
			case TK_NEXT:
			case TK_BREAK:
			case INCR:
			case DCR:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_progContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(MiLenguajeParser.VAR, 0); }
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public TerminalNode SMCOLON() { return getToken(MiLenguajeParser.SMCOLON, 0); }
		public Main_stmtContext main_stmt() {
			return getRuleContext(Main_stmtContext.class,0);
		}
		public TerminalNode TK_END() { return getToken(MiLenguajeParser.TK_END, 0); }
		public Main_progContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitMain_prog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_progContext main_prog() throws RecognitionException {
		Main_progContext _localctx = new Main_progContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main_prog);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(VAR);
				setState(72);
				var_decl();
				setState(73);
				match(SMCOLON);
				setState(74);
				main_stmt();
				setState(75);
				match(TK_END);
				}
				break;
			case TK_PRINT:
			case TK_INPUT:
			case TK_WHEN:
			case TK_IF:
			case TK_UNLESS:
			case TK_END:
			case TK_WHILE:
			case TK_RETURN:
			case TK_UNTIL:
			case TK_LOOP:
			case TK_DO:
			case TK_REPEAT:
			case TK_FOR:
			case TK_NEXT:
			case TK_BREAK:
			case INCR:
			case DCR:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				main_stmt();
				setState(78);
				match(TK_END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_stmtContext extends ParserRuleContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public Main_stmtContext main_stmt() {
			return getRuleContext(Main_stmtContext.class,0);
		}
		public Main_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitMain_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_stmtContext main_stmt() throws RecognitionException {
		Main_stmtContext _localctx = new Main_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_main_stmt);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_PRINT:
			case TK_INPUT:
			case TK_WHEN:
			case TK_IF:
			case TK_UNLESS:
			case TK_WHILE:
			case TK_RETURN:
			case TK_UNTIL:
			case TK_LOOP:
			case TK_DO:
			case TK_REPEAT:
			case TK_FOR:
			case TK_NEXT:
			case TK_BREAK:
			case INCR:
			case DCR:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				stmt();
				setState(83);
				main_stmt();
				}
				break;
			case TK_END:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public TerminalNode TK_PRINT() { return getToken(MiLenguajeParser.TK_PRINT, 0); }
		public List<LexprContext> lexpr() {
			return getRuleContexts(LexprContext.class);
		}
		public LexprContext lexpr(int i) {
			return getRuleContext(LexprContext.class,i);
		}
		public List<TerminalNode> SMCOLON() { return getTokens(MiLenguajeParser.SMCOLON); }
		public TerminalNode SMCOLON(int i) {
			return getToken(MiLenguajeParser.SMCOLON, i);
		}
		public TerminalNode TK_INPUT() { return getToken(MiLenguajeParser.TK_INPUT, 0); }
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode TK_WHEN() { return getToken(MiLenguajeParser.TK_WHEN, 0); }
		public TerminalNode PIZQ() { return getToken(MiLenguajeParser.PIZQ, 0); }
		public TerminalNode PDER() { return getToken(MiLenguajeParser.PDER, 0); }
		public TerminalNode TK_DO() { return getToken(MiLenguajeParser.TK_DO, 0); }
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public TerminalNode TK_IF() { return getToken(MiLenguajeParser.TK_IF, 0); }
		public TerminalNode TK_ELSE() { return getToken(MiLenguajeParser.TK_ELSE, 0); }
		public TerminalNode TK_UNLESS() { return getToken(MiLenguajeParser.TK_UNLESS, 0); }
		public TerminalNode TK_WHILE() { return getToken(MiLenguajeParser.TK_WHILE, 0); }
		public TerminalNode TK_RETURN() { return getToken(MiLenguajeParser.TK_RETURN, 0); }
		public TerminalNode TK_UNTIL() { return getToken(MiLenguajeParser.TK_UNTIL, 0); }
		public TerminalNode TK_LOOP() { return getToken(MiLenguajeParser.TK_LOOP, 0); }
		public Do_sigContext do_sig() {
			return getRuleContext(Do_sigContext.class,0);
		}
		public TerminalNode TK_REPEAT() { return getToken(MiLenguajeParser.TK_REPEAT, 0); }
		public TerminalNode TK_NUM() { return getToken(MiLenguajeParser.TK_NUM, 0); }
		public TerminalNode TK_FOR() { return getToken(MiLenguajeParser.TK_FOR, 0); }
		public TerminalNode TK_NEXT() { return getToken(MiLenguajeParser.TK_NEXT, 0); }
		public TerminalNode TK_BREAK() { return getToken(MiLenguajeParser.TK_BREAK, 0); }
		public SignoContext signo() {
			return getRuleContext(SignoContext.class,0);
		}
		public TerminalNode INCR() { return getToken(MiLenguajeParser.INCR, 0); }
		public TerminalNode DCR() { return getToken(MiLenguajeParser.DCR, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_PRINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(TK_PRINT);
				setState(89);
				lexpr();
				setState(90);
				match(SMCOLON);
				}
				break;
			case TK_INPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(TK_INPUT);
				setState(93);
				match(ID);
				setState(94);
				match(SMCOLON);
				}
				break;
			case TK_WHEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				match(TK_WHEN);
				setState(96);
				match(PIZQ);
				setState(97);
				lexpr();
				setState(98);
				match(PDER);
				setState(99);
				match(TK_DO);
				setState(100);
				stmt_block();
				}
				break;
			case TK_IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				match(TK_IF);
				setState(103);
				match(PIZQ);
				setState(104);
				lexpr();
				setState(105);
				match(PDER);
				setState(106);
				match(TK_DO);
				setState(107);
				stmt_block();
				setState(108);
				match(TK_ELSE);
				setState(109);
				stmt_block();
				}
				break;
			case TK_UNLESS:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				match(TK_UNLESS);
				setState(112);
				match(PIZQ);
				setState(113);
				lexpr();
				setState(114);
				match(PDER);
				setState(115);
				match(TK_DO);
				setState(116);
				stmt_block();
				}
				break;
			case TK_WHILE:
				enterOuterAlt(_localctx, 6);
				{
				setState(118);
				match(TK_WHILE);
				setState(119);
				match(PIZQ);
				setState(120);
				lexpr();
				setState(121);
				match(PDER);
				setState(122);
				match(TK_DO);
				setState(123);
				stmt_block();
				}
				break;
			case TK_RETURN:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				match(TK_RETURN);
				setState(126);
				lexpr();
				setState(127);
				match(SMCOLON);
				}
				break;
			case TK_UNTIL:
				enterOuterAlt(_localctx, 8);
				{
				setState(129);
				match(TK_UNTIL);
				setState(130);
				match(PIZQ);
				setState(131);
				lexpr();
				setState(132);
				match(PDER);
				setState(133);
				match(TK_DO);
				setState(134);
				stmt_block();
				}
				break;
			case TK_LOOP:
				enterOuterAlt(_localctx, 9);
				{
				setState(136);
				match(TK_LOOP);
				setState(137);
				stmt_block();
				}
				break;
			case TK_DO:
				enterOuterAlt(_localctx, 10);
				{
				setState(138);
				match(TK_DO);
				setState(139);
				stmt_block();
				setState(140);
				do_sig();
				}
				break;
			case TK_REPEAT:
				enterOuterAlt(_localctx, 11);
				{
				setState(142);
				match(TK_REPEAT);
				setState(143);
				match(TK_NUM);
				setState(144);
				match(T__0);
				setState(145);
				stmt_block();
				}
				break;
			case TK_FOR:
				enterOuterAlt(_localctx, 12);
				{
				setState(146);
				match(TK_FOR);
				setState(147);
				match(PIZQ);
				setState(148);
				lexpr();
				setState(149);
				match(SMCOLON);
				setState(150);
				lexpr();
				setState(151);
				match(SMCOLON);
				setState(152);
				lexpr();
				setState(153);
				match(PDER);
				setState(154);
				match(TK_DO);
				setState(155);
				stmt_block();
				}
				break;
			case TK_NEXT:
				enterOuterAlt(_localctx, 13);
				{
				setState(157);
				match(TK_NEXT);
				setState(158);
				match(SMCOLON);
				}
				break;
			case TK_BREAK:
				enterOuterAlt(_localctx, 14);
				{
				setState(159);
				match(TK_BREAK);
				setState(160);
				match(SMCOLON);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 15);
				{
				setState(161);
				match(ID);
				setState(162);
				signo();
				}
				break;
			case INCR:
				enterOuterAlt(_localctx, 16);
				{
				setState(163);
				match(INCR);
				setState(164);
				match(ID);
				setState(165);
				match(SMCOLON);
				}
				break;
			case DCR:
				enterOuterAlt(_localctx, 17);
				{
				setState(166);
				match(DCR);
				setState(167);
				match(ID);
				setState(168);
				match(SMCOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Do_sigContext extends ParserRuleContext {
		public TerminalNode TK_WHILE() { return getToken(MiLenguajeParser.TK_WHILE, 0); }
		public TerminalNode PIZQ() { return getToken(MiLenguajeParser.PIZQ, 0); }
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public TerminalNode PDER() { return getToken(MiLenguajeParser.PDER, 0); }
		public TerminalNode TK_UNTIL() { return getToken(MiLenguajeParser.TK_UNTIL, 0); }
		public Do_sigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_sig; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitDo_sig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_sigContext do_sig() throws RecognitionException {
		Do_sigContext _localctx = new Do_sigContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_do_sig);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				match(TK_WHILE);
				setState(172);
				match(PIZQ);
				setState(173);
				lexpr();
				setState(174);
				match(PDER);
				}
				break;
			case TK_UNTIL:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(TK_UNTIL);
				setState(177);
				match(PIZQ);
				setState(178);
				lexpr();
				setState(179);
				match(PDER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignoContext extends ParserRuleContext {
		public TerminalNode ASIGOP() { return getToken(MiLenguajeParser.ASIGOP, 0); }
		public Lexpr2Context lexpr2() {
			return getRuleContext(Lexpr2Context.class,0);
		}
		public TerminalNode SMCOLON() { return getToken(MiLenguajeParser.SMCOLON, 0); }
		public TerminalNode INCR() { return getToken(MiLenguajeParser.INCR, 0); }
		public TerminalNode DCR() { return getToken(MiLenguajeParser.DCR, 0); }
		public SignoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitSigno(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignoContext signo() throws RecognitionException {
		SignoContext _localctx = new SignoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_signo);
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGOP:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				match(ASIGOP);
				setState(184);
				lexpr2();
				setState(185);
				match(SMCOLON);
				}
				break;
			case INCR:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				match(INCR);
				setState(188);
				match(SMCOLON);
				}
				break;
			case DCR:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				match(DCR);
				setState(190);
				match(SMCOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_decl_listContext extends ParserRuleContext {
		public TerminalNode TK_FUNCTION() { return getToken(MiLenguajeParser.TK_FUNCTION, 0); }
		public TerminalNode FID() { return getToken(MiLenguajeParser.FID, 0); }
		public TerminalNode DATATYPE() { return getToken(MiLenguajeParser.DATATYPE, 0); }
		public TerminalNode PIZQ() { return getToken(MiLenguajeParser.PIZQ, 0); }
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public TerminalNode PDER() { return getToken(MiLenguajeParser.PDER, 0); }
		public Fn_decl_list_withVARContext fn_decl_list_withVAR() {
			return getRuleContext(Fn_decl_list_withVARContext.class,0);
		}
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public Fn_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_decl_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitFn_decl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fn_decl_listContext fn_decl_list() throws RecognitionException {
		Fn_decl_listContext _localctx = new Fn_decl_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fn_decl_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(TK_FUNCTION);
			setState(194);
			match(FID);
			setState(195);
			match(T__0);
			setState(196);
			match(DATATYPE);
			setState(197);
			match(PIZQ);
			setState(198);
			var_decl();
			setState(199);
			match(PDER);
			setState(200);
			fn_decl_list_withVAR();
			setState(201);
			stmt_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_decl_list_withVARContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(MiLenguajeParser.VAR, 0); }
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public TerminalNode SMCOLON() { return getToken(MiLenguajeParser.SMCOLON, 0); }
		public Fn_decl_list_withVARContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_decl_list_withVAR; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitFn_decl_list_withVAR(this);
			else return visitor.visitChildren(this);
		}
	}
